新增获取当前登录用户信息接口
