# apiserver/restapi/operations/user/get_user_info.go
@@ -1,0 +1,72 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package user
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+	v1 "github.com/yushk/healthy_backend/apiserver/v1"
+)
+
+// GetUserInfoHandlerFunc turns a function with the right signature into a get user info handler
+type GetUserInfoHandlerFunc func(GetUserInfoParams, *v1.Principal) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn GetUserInfoHandlerFunc) Handle(params GetUserInfoParams, principal *v1.Principal) middleware.Responder {
+	return fn(params, principal)
+}
+
+// GetUserInfoHandler interface for that can handle valid get user info params
+type GetUserInfoHandler interface {
+	Handle(GetUserInfoParams, *v1.Principal) middleware.Responder
+}
+
+// NewGetUserInfo creates a new http.Handler for the get user info operation
+func NewGetUserInfo(ctx *middleware.Context, handler GetUserInfoHandler) *GetUserInfo {
+	return &GetUserInfo{Context: ctx, Handler: handler}
+}
+
+/* GetUserInfo swagger:route GET /v1/user user getUserInfo
+
+获取当前用户信息
+
+获取当前用户信息
+
+*/
+type GetUserInfo struct {
+	Context *middleware.Context
+	Handler GetUserInfoHandler
+}
+
+func (o *GetUserInfo) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewGetUserInfoParams()
+	uprinc, aCtx, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	if aCtx != nil {
+		*r = *aCtx
+	}
+	var principal *v1.Principal
+	if uprinc != nil {
+		principal = uprinc.(*v1.Principal) // this is really a v1.Principal, I promise
+	}
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params, principal) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
